# latte-dock-qt6

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  alternativeshelper.cpp  coronaengine.cpp  coronaengine.h  coronahelpers.cpp  coronahelpers.h  icoronahost.h  infoview.cpp  infoview.h  iscreeninfo.h  lattecorona.cpp  lattecorona.h  main.cpp  org.kde.latte-dock.appdata.xml.cmake  primaryoutputwatcher.cpp  realscreeninfo.cpp  realscreeninfo.h  screengeometrycalculator.cpp  screengeometrycalculator.h  screenpool.cpp  startuplayoutplanner.cpp  startuplayoutplanner.h
app/data/: activitiesinfo.cpp  activitiesinfo.h  activitydata.h  activitystatescache.h  contextmenudata.h  generictable.cpp  layoutdata.cpp  layoutdata.h  layoutstable.cpp  screendata.cpp  viewdata.cpp  viewstable.cpp
app/dbus/: org.kde.LatteDock.xml
app/declarativeimports/: contextmenulayerquickitem.cpp  interfaces.cpp  interfaces.h
app/indicator/: factory.cpp
app/layout/: CMakeLists.txt  abstractlayout.cpp  abstractlayout.h  addviewdecision.cpp  addviewdecision.h  centrallayout.cpp  genericlayout.cpp  genericlayout.h  iviewfactory.h  realviewfactory.cpp  realviewfactory.h  validviewsmapbuilder.cpp  validviewsmapbuilder.h  viewcontainertransition.h  viewpriority.cpp  viewpriority.h  viewsmap.h  viewsyncplan.cpp  viewsyncplan.h
app/layouts/: CMakeLists.txt  activitysetalgebra.h  importer.cpp  manager.cpp  manager.h  storage.cpp  storage.h  storageidremapper.cpp  storageidremapper.h  storagevalidator.cpp  storagevalidator.h  syncedlaunchers.cpp  synchronizer.cpp  synchronizer.h
app/package/: lattepackage.cpp
app/packageplugins/indicator/: CMakeLists.txt
app/plasma/extended/: CMakeLists.txt  backgroundcache.cpp  panelbackground.cpp  panelbackgroundscan.cpp  panelbackgroundscan.h  screengeometries.cpp  screengeometries.h  screenpool.cpp  theme.cpp  theme.h
app/settings/: settingsnameutils.h  universalsettings.cpp  universalsettings.h
app/settings/actionsdialog/: actionshandler.cpp
app/settings/detailsdialog/: colorsmodel.cpp  detailsdialog.cpp  detailshandler.cpp  patternwidget.cpp  schemesmodel.cpp
app/settings/exporttemplatedialog/: appletsmodel.cpp  exporttemplatedialog.cpp  exporttemplatehandler.cpp
app/settings/generic/: genericdialog.cpp  generichandler.cpp  generictools.cpp  persistentmenu.cpp
app/settings/screensdialog/: screensdialog.cpp  screenshandler.cpp  screensmodel.cpp
app/settings/settingsdialog/: layoutscontroller.cpp  layoutsmodel.cpp  layoutsmodel.h  layoutstableview.cpp  settingsdialog.cpp  tablayoutshandler.cpp  tabpreferenceshandler.cpp  templateskeeper.cpp
app/settings/viewsdialog/: viewscontroller.cpp  viewsdialog.cpp  viewshandler.cpp  viewsmodel.cpp  viewstableview.cpp
app/shortcuts/: globalshortcuts.cpp  globalshortcuts.h  shortcutstracker.cpp  shortcutstracker.h
app/templates/: templatesmanager.cpp  templatesmanager.h
app/tools/: commontools.cpp
app/view/: clonedview.cpp  containmentinterface.cpp  effects.cpp  effects.h  eventssink.cpp  originalview.cpp  positioner.cpp  positioner.h  positionergeometry.h  view.cpp  view.h  visibilitymanager.cpp  visibilitymanager.h
app/view/helpers/: floatinggapwindow.cpp  screenedgeghostwindow.cpp  subwindow.cpp
app/view/indicator/: indicator.cpp  indicator.h  indicatorinfo.cpp  indicatorresources.cpp
app/view/settings/: canvasconfigview.cpp  canvasconfigview.h  indicatoruimanager.cpp  primaryconfigview.cpp  primaryconfigview.h  (+3 more)
app/wm/: CMakeLists.txt  abstractwindowinterface.cpp  schemecolors.cpp  tasktools.cpp  waylandinterface.cpp  waylandinterface.h  waylandlayershell.cpp  waylandlayershell.h  windowindex.h  windowinfowrap.cpp  windowinfowrap.h  windowtrackingpredicates.h
containmentactions/contextmenu/: CMakeLists.txt  layoutmenuitemwidget.cpp  menu.cpp
declarativeimports/core/: CMakeLists.txt  dialog.cpp  environment.cpp  extras.h  iconitem.cpp  iconsourceclassifier.h  lattecoreplugin.cpp  quickwindowsystem.cpp
plasmoid/: CMakeLists.txt
plasmoid/package/: metadata.json
plasmoid/plugin/: backend.cpp  backend.h  lattetasksplugin.cpp
tests/: CMakeLists.txt  abstractlayouttest.cpp  activitiesinfotest.cpp  activitysetalgebratest.cpp  activitystatescachetest.cpp  addviewdecisiontest.cpp  alternativescreateapplettest.cpp  appletremovaltest.cpp  appletzoomsizetest.cpp  bindingrestoremodetest.cpp  commontoolstest.cpp  configcontrolstest.cpp  contextmenudefaulttest.cpp  coretoolstest.cpp  coretypesenumtest.cpp  coronaenginegeometrytest.cpp  coronahelperstest.cpp  datatypestest.cpp  editmodehandleactiontest.cpp  extraviewhintstest.cpp  fakescreeninfo.h  generictoolstest.cpp  iconsourceclassifiertest.cpp  importerlogictest.cpp  importernametest.cpp  indicatormetadatatest.cpp  indicatorsknsrctest.cpp  lastactivewindowtest.cpp  layershellmappingtest.cpp  layoutmanagertest.cpp  layoutsmodeltest.cpp  panelbackgroundscantest.cpp  panelbackgroundtest.cpp  positionergeometrytest.cpp  schemesmodeltest.cpp  screengeometrycalculatortest.cpp  screenpooltest.cpp  settingsmodelstest.cpp  settingsnameutilstest.cpp  shortcutstest.cpp  (+22 more)
tests/coverage/: .cxx-baseline.json  .qml-baseline.json  README.md  cxx_coverage.sh  cxx_report.py  lint_pkg_tests.py  live-only.md  live_capture.sh  pre-push.sample  qml_coverage.sh  ratchet.py  remap_catalog.py  run.sh  verify_harness.py
tests/e2e/: README.md  run.sh  shot.py
tests/manual/: CMakeLists.txt  editmode_tooltip_guard.sh  layershell_anchor_test.cpp  plasmawindow_bind_test.cpp  qml_interaction_test.sh  qml_load_compile.sh  qml_load_gate.sh
tests/qml/: EdgeShadowsHarness.qml  ScrollMaskHarness.qml  tst_covself.qml  tst_editmodehandle.qml  tst_effectmath.qml  tst_glowpoint.qml  tst_lattecheckbox.qml  tst_rectangularshadow.qml  tst_runningindicatorcolor.qml  tst_scrolledgeshadows.qml  tst_scrollmask.qml  tst_shadoweditem.qml  tst_shadowhelper.qml  tst_taskicon_effects.qml  tst_tooltipinstance.qml
tests/sceneprobe/: CMakeLists.txt  imagecompare.cpp  imagecompare.h  imagecompare_test.cpp  imgdiff_main.cpp  main.cpp  run.sh  run_in_kwin.sh
(+210 files in other folders)
